fix: Remove emoji from Little Prince CTA scene
- Removed rose emoji (🌹) that was not rendering properly
- Confirmed no other emojis exist in book.yaml files
- Video generation now works correctly without emoji issues

--- a/books/little_prince/book.yaml
+++ b/books/little_prince/book.yaml
@@ -211,7 +211,7 @@ slides:
     
   - type: "cta"
     duration: 3
-    text: "Przeczytaj i odkryj, co Twoja róża znaczy dla Ciebie 🌹"
+    text: "Przeczytaj i odkryj, co Twoja róża znaczy dla Ciebie"
     hashtags: ["#MałyKsiążę", "#LittlePrince", "#Klasyka"]
     scene:
       elements:
